fix: harden metadata field validation